Fix #944 flag map not showing all flags properly.

--- a/jvlm/jvlm.less
+++ b/jvlm/jvlm.less
@@ -152,7 +152,7 @@ option.RacingBoat {
 .FlagLabel
 {
   position: absolute;
-  margin-top: -26px;
+  margin-top: 0px;
   margin-left: 5px;
 }
 .LngFlag {
